Final update for the first alpha release (a0.0.1), added new material, fixed textures, finished grinder implementation, planning for 1.21.5.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
-        "danismod"
-    ]
+        "danismod",
+        "manebone"
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
