--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ minecraft_version=1.21.4
 yarn_mappings=1.21.4+build.8
 loader_version=0.16.10
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=alpha-0.0.1
 maven_group=org.danismod
-archives_base_name=danismod
+archives_base_name=ranimals
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.118.0+1.21.4
