Added charging for buffaloes, fixed some redundant code and updated targeting.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "danismod",
+        "headbone",
         "manebone"
     ],
     "java.configuration.updateBuildConfiguration": "interactive"
